@@ -1,25 +1,20 @@
 """
 
 Examples illustrating the usage of the "association object" pattern,
-where an intermediary object associates two endpoint objects together.
+where an intermediary class mediates the relationship between two
+classes that are associated in a many-to-many pattern.
 
-The first example illustrates a basic association from a User object
-to a collection or Order objects, each which references a collection of Item objects.
+This directory includes the following examples:
 
-The second example builds upon the first to add the Association Proxy extension.
-
-E.g.::
-
-    # create an order
-    order = Order('john smith')
-
-    # append an OrderItem association via the "itemassociations"
-    # collection with a custom price.
-    order.itemassociations.append(OrderItem(item('MySQL Crowbar'), 10.99))
-
-    # append two more Items via the transparent "items" proxy, which
-    # will create OrderItems automatically using the default price.
-    order.items.append(item('SA Mug'))
-    order.items.append(item('SA Hat'))
+* basic_association.py - illustrate a many-to-many relationship between an 
+  "Order" and a collection of "Item" objects, associating a purchase price
+  with each via an association object called "OrderItem"
+* proxied_association.py - same example as basic_association, adding in
+  usage of :mod:`sqlalchemy.ext.associationproxy` to make explicit references
+  to "OrderItem" optional.
+* dict_of_sets_with_default.py - an advanced association proxy example which
+  illustrates nesting of association proxies to produce multi-level Python
+  collections, in this case a dictionary with string keys and sets of integers
+  as values, which conceal the underlying mapped classes.
 
 """
